Update to Java25